--- a/parprouted.pod
+++ b/parprouted.pod
@@ -7,7 +7,7 @@ B<parprouted> - Proxy ARP IP bridging daemon
 
 =head1 SYNOPSIS
 
-B<parprouted> [B<-d>] [B<-p>] B<interface> [B<interface>]
+B<parprouted> [B<--debug -d>] [B<--foreground -f>] [B<--permanent -p>] B<interface> [B<interface ...>]
 
 =head1 DESCRIPTION
 
@@ -15,8 +15,8 @@ parprouted is a daemon for transparent IP (Layer 3) proxy ARP bridging.
 Unlike standard bridging, proxy ARP bridging allows to bridge Ethernet 
 networks behind wireless nodes. Normal L2 bridging does not work between 
 wireless nodes because wireless does not know about MAC addresses used 
-in the wired Ethernet networks. Also this daemon is useful
-for making transparent firewalls.
+in the wired Ethernet networks. Also this daemon is useful for making 
+transparent firewalls.
 
 The daemon listens for incoming ARP requests, and in case the location 
 of the requested IP address is unknown, forwards them to other interfaces, 
@@ -26,21 +26,21 @@ stations to send traffic to the host daemon is running on. By
 automatically adding appropriate /32 routes to Linux kernel IP routing 
 table for the hosts learned via ARP, daemon ensures that the Linux kernel 
 will be able to route the packets to the destination host when it receives 
-them without any need routing/subnetting manually.  
+them without any need routing/subnetting manually.
 
 All routes entered by the daemon have a metric of 50. 
 
-Unless you use B<-p> switch, all entries in the ARP table will be
-refreshed (rechecked by sending ARP requests) every 50 seconds. This
+Unless you use B<-p> switch, all entries in the ARP table will be 
+refreshed (rechecked by sending ARP requests) every 50 seconds. This 
 keeps them from being expired by kernel.
 
-Normally it takes about 60 ms for a bridge to update all its tables and
+Normally it takes about 60 ms for a bridge to update all its tables and 
 start sending packets to the destination.
 
 =head1 REQUIREMENTS
 
-This daemon can be used for unicast traffic only. I.e., DHCP is not supported.
-Use software such as dhcrelay to "bridge" DHCP.
+This daemon can be used for unicast traffic only. i.e., DHCP is not supported.
+Use software such as dhcprelay to "bridge" DHCP.
 
 You should have an IP address assigned on all of your interfaces that you do 
 bridging on. There is no need for this address to be from the same networks as 
@@ -50,24 +50,23 @@ The system should have correct default route.
 
 parprouted requires "ip" program from iproute2 tools to be installed in 
 /sbin. If it is installed in another location, please replace "/sbin/ip" 
-occurances in the source with the correct path. As well you should have
+occurrences in the source with the correct path. As well you should have 
 proc filesystem mounted in /proc because the daemon uses /proc/net/arp.
-
-parprouted is designed for and tested only with Linux 2.4.x kernels.
 
 =head1 OPTIONS
 
-The list of interfaces to do bridging on should be given via the command
-line.
+The list of interfaces to do bridging on should be given via the command line.
 
 The daemon accepts the following switches:
 
-B<-d>, which stands for debugging. If you run it in debugging mode the daemon 
-will not go to background and will print additional debugging information to 
-stdout/stderr.
+B<-f>, which stands for foreground. This option prevents running the program 
+as a daemon.
 
-B<-p>, which makes all ARP entries to be permanent. This will also
-result in that ARP tables will not be refreshed by ARP pings.
+B<-d>, which stands for debug. Extra debugging info is emitted to 
+stdout/stderr. This implies B<-f>.
+
+B<-p>, which makes all ARP entries permanent. This will also result in that 
+ARP tables will not be refreshed by ARP pings.
 
 =head1 EXAMPLE
 
